<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue900"
    tools:context=".view.ui.detail.detailmovie.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.MaterialComponents">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimaryVariant"
            app:collapsedTitleGravity="fill_vertical"
            app:collapsedTitleTextAppearance="?attr/colorOnPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/backdrop_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/img_backdrop_test"
                android:contentDescription="@string/the_movie_poster" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/detail_menu"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:padding="@dimen/activity_vertical_margin">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/data_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/movie_title"
                    style="@style/App.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/title_movies"
                    android:textSize="@dimen/text_header"
                    android:textStyle="bold"
                    android:layout_marginEnd="70dp"/>
                <TextView
                    android:id="@+id/movie_tagline"
                    style="@style/App.TextView.Sub2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="@dimen/text_size"
                    tools:text="@string/lorem2" />
                <TextView
                    android:id="@+id/movie_genres"
                    style="@style/App.TextView.Sub2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top2"
                    android:textSize="@dimen/text_size"
                    tools:text="@string/lorem2" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <RatingBar
                        android:id="@+id/movie_rating"
                        style="@style/RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rating="@string/rating_tools"
                        android:layout_gravity="fill"
                        android:theme="@style/RatingBar"/>

                    <TextView
                        android:id="@+id/movie_vote_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/layout_margin_top"
                        android:text="@string/voters_tools"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/movie_release"
                        style="@style/App.TextView.Sub2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:textSize="@dimen/text_size"
                        app:drawableStartCompat="@drawable/ic_baseline_calendar"
                        tools:text="@string/release_date_tools" />

                    <TextView
                        android:id="@+id/movie_lang"
                        style="@style/App.TextView.Sub2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/lang_tools"
                        android:drawablePadding="5dp"
                        android:layout_marginStart="@dimen/layout_margin_top3"
                        app:drawableStartCompat="@drawable/ic_baseline_language"
                        android:textSize="@dimen/text_size" />

                </LinearLayout>
                <TextView
                    android:id="@+id/overview_title"
                    style="@style/App.TextView.Sub2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top2"
                    android:text="@string/overview_title"
                    android:textSize="@dimen/text_header_3"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/movie_overview"
                    style="@style/App.TextView.Sub2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    tools:text="@string/lorem"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_favorite_24"
        android:contentDescription="@string/add_to_favorite" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
