...
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="@dimen/layout_margin_top"
        android:clipToPadding="false"
        android:background="@color/blue900"
...
        android:visibility="gone"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_anchor="@id/rv_favorite"
        app:layout_anchorGravity="center_horizontal|center_vertical"/>

    <RelativeLayout
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/rv_favorite"
        android:visibility="gone"
        app:layout_anchorGravity="center">

...
